2002-02-25  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Deliver.py: New module to handle local mail delivery.

2002-02-23  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (BOUNCE_ENV_SENDER): Fix quoting to comply with
	Util.sendmail().
	
        * Util.py (pipecmd): New function that runs child processes with
        error checking.

        (sendmail): New function to send e-mail with the sendmail program.
                
        * MTA.py (MTA.deliver): Use Util.pipecmd() to deliver the
        message.  Also raise an exception rather than sys.exit(75) upon
        error.
                
        * Errors.py: Add DeliveryError for delivery module related errors.
        
        * Defaults.py: Remove SENDMAIL path checking; Util.sendmail() will
        catch any such errors.

2002-02-22  Tim Legant  <tim@catseye.net>

	* Util.py (build_dbm): Fixed bug; DBM was renamed to current
	directory instead of respecting the path.

	* FilterParser.py (FilterParser.firstmatch): If no rule is found,
	return an empty dictionary instead of None.

	* FilterParser.py (FilterParser.__autobuild_db): New function.

	(FilterParser.firstmatch): Factored above function out of
	'from-/to-file' clause to clean up code.
	
	* FilterParser.py (FilterParser.firstmatch): Made autodbm
	functionality use a surrogate file to determine whether the DBM is
	up to date.  This is because of the varied naming of DBM files
	across platforms.  It was suggested by Matt Armstrong.

	(FilterParser._actionstr): Fixed bug introduced by new
	dictionary layout for incoming rules.

	* Util.py (build_dbm): New function, based on the list2dbm
	utility.

	* FilterParser.py (FilterParser): Added -autodbm option to
	'from-file' and 'to-file'.

	(FilterParser.__search_dbm): New function.

	(FilterParser.firstmatch): Modified 'from-/to-file' clause to
	support the -autodbm argument.  Modified 'from-/to-dbm' clause to
	use the new __search_dbm function.
