@@ -1,3 +1,9 @@
+2002-02-25  Tim Legant  <webmaster@catseye.net>
+
+	* FilterParser.py (FilterParser): Fixed in_action regexp to allow
+	the 'ok' and 'accept' actions to accept options just like
+	'deliver'.
+
 2002-02-25  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* Deliver.py: New module to handle local mail delivery.
